--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 </a>
 </p>
 
+  <!-- Begin Security Alert -->
+<p>
+<h2 style="color:red">Vulnerability in Git announced: please update Gonsole</h2>
+A <a href="https://github.com/blog/1938-vulnerability-announced-update-your-git-clients" target="_blank">critical Git security vulnerability has been announced</a> that also affects JGit, the library that Gonsole includes to execute Git commands. JGit has released a maintenance version that has been integrated into Gonsole.
+</p>
+<p>
+To update to the latest verion, select <em>Check for Updates</em> from the <em>Help</em> menu in the Eclipse IDE.
+<br />
+<br />
+</p>
+  <!-- End Security Alert -->
+
 <p>
 <a href="http://git-scm.com/">Git</a> is a popular version control system. 
 This project integrates a Git console into the Eclipse IDE. 
